--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,12 +1,14 @@
 * {
   background-color: var(--background);
+  font-family: Arial, Helvetica, sans-serif;
 }
 :root {
   --background-items: rgb(131, 122, 116);
   --background: rgb(211, 208, 205);
   --background-Header: rgb(114, 103, 103);
-  --color-span-green: rgb(255, 145, 0);
-  --color-span-text: rgb(223, 212, 212);
+  --color-red: rgb(139, 19, 19);
+  --color-white: rgb(223, 212, 212);
+  --color-black: rgb(17, 16, 16);
 }
 
 a {
@@ -15,6 +17,9 @@ a {
 
 #root {
   margin: -8px;
+  width: 100%;
+  height: fit-content;
+  position: absolute;
 }
 /* Header */
 .header {
@@ -22,67 +27,87 @@ a {
   height: 50px;
   background-color: var(--background-Header);
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   position: fixed;
-  z-index: 100;
-  padding: 0px 50px;
+  z-index: 101;
 }
 /* search-box */
+.search {
+  display: flex;
+  background-color: var(--background-Header);
+}
 .search-box {
-  display: grid;
-  justify-content: center;
   background-color: inherit;
-  margin-top: 0px;
   position: relative;
 }
 #input {
+  margin: 0 10px;
   width: 200px;
   height: 30px;
-  border: 1px solid black;
+  border: 0;
   border-radius: 50px;
   padding: 5px;
   font-size: 15px;
   color: var(--background-Header);
 }
-#notFindMovieDisplayOff{
+
+#notFindMovie span {
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  width: 210px;
+  font-size: 14px;
+  background-color: var(--color-red);
+}
+#ShowSearchMoviesOff {
   display: none;
 }
-#notFindMovieDisplayOn{
-display: flex;
-align-items: center; 
-position: absolute;
-width: 210px;
-height: 30px;
-margin: 48px 0;
-background-color: var(--color-span-green);
-border-radius: 50px;
+#ShowSearchMoviesOn {
+  position: fixed;
+  width: 220px;
+  height: 260px;
+  margin-top: 5px;
+  background-color: var(--background-Header);
+  overflow: auto;
 }
-#notFindMovie span{
-border-radius: 50px;
-display: flex;
-justify-content: center;
-width: 210px;
-font-size: 14px;
-background-color: var(--color-span-green);
+
+#ShowSearchMoviesOn .items {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 5px 5px;
+  width: 95%;
+  background-color: var(--background-Header);
+}
+#ShowSearchMoviesOn .items .names {
+  padding: 0 5px;
+  font-size: 17px;
+  background-color: var(--background-Header);
+  color: var(--color-red);
+  width: 100%;
+}
+#ShowSearchMoviesOn .items img {
+  width: 60px;
+  height: 80px;
+  border-radius: 10px;
+  object-fit: cover;
 }
 
 /* search Icon */
-.buttons{
-display: flex;
-background-color: var(--background-Header);
-align-items: center;
+
+.searchIcon {
+  display: grid;
+  border-radius: 50%;
+  margin: 5px;
 }
-.buttons .searchIcon {
-  display: contents;
-}
-.buttons .btnSearchLink {
+.btnSearchLink {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
 }
-.buttons .btnSearch {
-  color: var(--color-span-text);
+.btnSearch {
+  color: var(--color-white);
   border: 0;
   border-radius: 50%;
   width: 30px;
@@ -93,12 +118,11 @@ align-items: center;
   justify-content: center;
   align-items: center;
 }
-.buttons .btnSearch i {
-  color: var(--color-span-green);
+.btnSearch i {
+  color: var(--color-red);
 }
 
 /* btn home */
-
 
 #homeIcon {
   display: grid;
@@ -120,10 +144,9 @@ align-items: center;
 
 #homeIcon #btnHome i {
   background-color: var(--background);
-  color: var(--color-span-green);
+  color: var(--color-red);
   font-size: 15px;
 }
-
 
 #newHomeIcon {
   display: grid;
@@ -145,25 +168,27 @@ align-items: center;
 
 #NewHomeIcon #btnHome i {
   background-color: var(--background);
-  color: var(--color-span-green);
+  color: var(--color-red);
   font-size: 15px;
 }
 
-
 /* bestMovies */
-
-.bestMovies{
+#bestMoviesDisplayOff {
+  display: none;
+}
+#bestMovies {
   display: flex;
   justify-content: center;
   align-items: center;
   padding-top: 65px;
 }
-.bestMovies .images{
+#bestMovies .images {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1;
 }
-.bestMovies .btnLeft{
+#bestMovies .btnLeft {
   margin: 0 10px;
   width: 35px;
   height: 35px;
@@ -171,35 +196,31 @@ align-items: center;
   font-size: 20px;
   cursor: pointer;
 }
-.bestMovies .btnRight{
+#bestMovies .btnRight {
   width: 35px;
   height: 35px;
   margin: 0 10px;
   border-radius: 50%;
   font-size: 20px;
   cursor: pointer;
-}
-.displayOffBestMovie{
-  display: none;
-}
-.bestMovies .images .imgNotShow{
-  width: 300px;
-  height: 450px;
-  display: none;
-}
-.bestMovies .images .imgShow{
-  width: 300px;
-  height: 450px;
-  display: block;
-  margin: 0 10px;
 }
 
-.bestMovies .images .imgShowCenter{
+#bestMovies .images .imgNotShow {
+  display: none;
+}
+#bestMovies .images .imgShow {
+  width: 300px;
+  height: 450px;
+  margin: 0 10px;
+  opacity: 0.6;
+  box-shadow: 0px 6px 20px 1px;
+}
+
+#bestMovies .images .imgShowCenter {
   width: 350px;
   height: 500px;
-  display: block;
+  box-shadow: 0px 6px 20px 1px;
 }
-
 
 /* Movies Show */
 
@@ -235,45 +256,45 @@ align-items: center;
   align-items: center;
 }
 
-.movieShow .Picture img{
+.movieShow .Picture img {
   border-radius: 10px;
   width: 250px;
   height: 350px;
   object-fit: cover;
 }
-.information {
+.movieShow .information {
   background-color: var(--background-items);
   display: grid;
 }
-.information .item-name{
+.movieShow .information .item-name {
   display: flex;
-  font-size: 20px;
-  color: var(--color-span-green);
+  font-size: 15px;
+  color: var(--color-red);
   background-color: inherit;
   justify-content: center;
 }
-.information .item-name .name{
-  color: var(--color-span-green);
+.movieShow .information .item-name .name {
+  color: var(--color-red);
   background-color: inherit;
 }
-.item {
+.movieShow .item {
   display: flex;
   background-color: inherit;
   justify-content: flex-start;
   align-items: flex-start;
 }
 
-.information .item .itemName {
-  color: var(--color-span-green);
+.movieShow .information .item .itemName {
+  color: var(--color-red);
   background-color: inherit;
   display: flex;
   font-size: 20px;
 }
-.information .item .text {
+.movieShow .information .item .text {
   width: 240px;
   display: flex;
   background-color: inherit;
-  color: var(--color-span-text);
+  color: var(--color-white);
   font-size: 18px;
   width: 350px;
   height: 50px;
@@ -281,71 +302,100 @@ align-items: center;
 
 /* Movie show */
 
-/* #Show .movieShow {
+#movie {
   width: 100%;
-  padding-top: 10px;
-  display: grid;
-  align-items: center;
-  justify-items: center;
-  background-color: var(--background);
-  height: 600px;
-  border-radius: 50px;
+  padding-top: 60px;
+  background-color: inherit;
+  height: fit-content;
+}
+#movie .main {
+  display: flex;
 }
 
-#Show .movieShow img {
-  width: 450px;
-  height: 500px;
+
+#movie #name {
+  display: flex;
+  justify-content: flex-start;
+  background-color: inherit;
+  color: var(--color-black);
+  width: 100%;
+}
+#movie #name span{
+  color: var(--color-black);
+  font-size: 25px;
+  font-weight: 900;
+  margin: 0 50px;
+}
+#movie .column1 img {
+  width: 250px;
+  height: 350px;
   border-radius: 10%;
   object-fit: cover;
   margin: 20px;
 }
-
-#Show .movieShow .information {
+#movie .main .column2 {
   display: grid;
-  grid-template-columns: auto;
+  grid-template-columns: 2fr 1fr;
   background-color: inherit;
-  justify-items: start;
+  justify-items: center;
   align-items: center;
-  height: 600px;
-  background-color: var(--background-Header);
-} 
-.information #names {
-  width: 98%;
 }
-.information .names span {
-  display: flex;
-  justify-content: center;
+#movie .main .column2 .col1 {
+  margin: 0 10px;
+}
+
+#movie .main .column2 .col1 p {
   background-color: inherit;
-  color: var(--color-span-green);
+  font-size: 25px;
+  color: var(--color-black);
+  cursor: context-menu;
+  text-align: justify;
+}
+#movie .main .column2 .col1 p span {
+  padding-left: 10px;
+  background-color: inherit;
   font-size: 25px;
 }
-.information p {
+#movie .main .column2 .col2 {
+  background-color: var(--background-Header);
+  border-radius: 10px;
+  margin: 5px 10px;
+  height: fit-content;
+  width: fit-content;
+}
+#movie .main .column2 .col2 p {
   background-color: inherit;
   font-size: 20px;
-  color: var(--color-span-text);
+  color: var(--color-red);
   cursor: context-menu;
+  padding: 0 10px;
 }
-.information p span {
+#movie .main .column2 .col2 p span {
+  padding-left: 10px;
   background-color: inherit;
-  font-size: 25px;
-  color: var(--color-span-green);
+  font-size: 20px;
+  color: var(--color-black);
 }
-.information .links {
+
+#movie .main .column2 .links {
   display: flex;
-  justify-content: space-evenly;
-  width: 98%;
   background-color: inherit;
-  padding-top: 40px;
+  justify-content: space-around;
 }
-.link {
-  border: 3px solid var(--color-span-green);
+#movie .main .column2 .link {
+  margin: 0px 15px;
+  border: 3px solid var(--color-red);
   padding: 5px;
   border-radius: 20px;
   font-size: 15px;
   text-decoration: none;
-  color: var(--color-span-green);
-  background-color: var(--background-items);
-} */
+  color: var(--color-red);
+  background-color: inherit;
+  width: 100px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
 
 /* vpn */
 
@@ -355,34 +405,17 @@ align-items: center;
   justify-content: center;
 }
 .vpn .text {
-  border: 5px solid var(--color-span-green);
+  border: 5px solid var(--color-red);
   padding: 20px;
   border-radius: 40px;
   color: var(--background-Header);
 }
 .vpn .text span {
-  color: var(--color-span-green);
-}
-
-/* notMovie */
-
-.notMovie {
-  padding-top: 150px;
-  display: flex;
-  justify-content: center;
-}
-.notMovie .text {
-  border: 5px solid var(--color-span-green);
-  padding: 20px;
-  border-radius: 40px;
-  color: var(--background-Header);
-}
-.notMovie .text span {
-  color: var(--color-span-green);
+  color: var(--color-red);
 }
 
 /* pagination */
-.containerPaginationDisplayOff{
+.containerPaginationDisplayOff {
   display: none;
 }
 .containerPagination {
@@ -397,11 +430,11 @@ align-items: center;
   display: flex;
   align-items: center;
   background-color: var(--background-Header);
-  color: var(--color-span-green);
+  color: var(--color-red);
   font-size: 20px;
   height: 30px;
 }
-.titlePagination p{
+.titlePagination p {
   background-color: var(--background-Header);
 }
 .paginationShow {
@@ -412,7 +445,7 @@ align-items: center;
 .paginationShow #next {
   padding: 0 8px;
   background-color: var(--background-Header);
-  color:var(--color-span-green);
+  color: var(--color-red);
   border: 0px;
   cursor: pointer;
 }
@@ -420,19 +453,19 @@ align-items: center;
   background-color: var(--background-Header);
   cursor: pointer;
   padding: 0 8px;
-  color: var(--color-span-green);
+  color: var(--color-red);
   border: 0px;
 }
-#pages{
-background-color: var(--background-Header);
-margin: 10px;
+#pages {
+  background-color: var(--background-Header);
+  margin: 10px;
 }
 .numbers {
   background-color: var(--background-Header);
-  color: var(--color-span-text);
+  color: var(--color-white);
   cursor: pointer;
   padding: 0 6px;
-  border: 1px solid var(--color-span-text);
+  border: 1px solid var(--color-white);
   border-radius: 50%;
   margin: 0px 10px;
 }
@@ -440,6 +473,6 @@ margin: 10px;
   background-color: var(--background-Header);
   cursor: pointer;
   padding: 0 6px;
-  color: var(--color-span-green);
-  border: 1px solid var(--color-span-green);
+  color: var(--color-red);
+  border: 1px solid var(--color-red);
 }
