--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,6 +1,6 @@
 * {
-  background-color: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+
 }
 :root {
   --background-items: rgb(131, 122, 116);
@@ -17,9 +17,19 @@ a {
 
 #root {
   margin: -8px;
-  width: 100%;
   height: fit-content;
   position: absolute;
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  
+}
+.body .bac{
+  position: fixed;
+  width: 100%;
+  height: max-content;
+  object-fit: fill;
+  z-index: -10;
 }
 /* Header */
 .header {
@@ -174,22 +184,23 @@ a {
 
 /* bestMovies */
 
-#bestMoviesDisplayOff {
-  display: none;
-}
+
 #bestMovies {
   display: flex;
   justify-content: center;
   align-items: center;
   padding-top: 65px;
+  width: 100%;
+  height: 500px;
 }
+
 #bestMovies #images {
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1;
 }
-#bestMovies .btnLeft {
+#bestMovies #btnLeft {
   margin: 0 10px;
   width: 35px;
   height: 35px;
@@ -197,7 +208,7 @@ a {
   font-size: 20px;
   cursor: pointer;
 }
-#bestMovies .btnRight {
+#bestMovies #btnRight {
   width: 35px;
   height: 35px;
   margin: 0 10px;
@@ -207,20 +218,26 @@ a {
 }
 
 
-#bestMovies #images .imgShow {
+#bestMovies #images .imgShow{
   width: 300px;
   height: 450px;
-  margin: 0 10px;
+  margin: 0 50px;
   opacity: 0.6;
   box-shadow: 0px 6px 20px 1px;
+  position: static;
+
+  
 }
 
 
 #bestMovies #images .imgShowCenter {
-  width: 350px;
+  width: 350px ;
   height: 500px;
   box-shadow: 0px 6px 20px 1px;
+  position: static;
 }
+
+
 
 /* Movies Show */
 
@@ -230,6 +247,7 @@ a {
   align-items: center;
   padding-top: 50px;
   display: grid;
+  opacity: .8;
 }
 
 #displayOff {
